--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,3 +1,22 @@
-<h1 class="title">
-    Home page
-</h1>
+<div class="mt-4">
+    <ul class="row d-flex justify-content-between">
+        {{#each courses}}
+            <li class="card col-sm-6 col-lg-3 pt-2 m-2">
+                <img
+                    class="card-img-top"
+                    src="{{this.image}}"
+                    alt="{{this.name}}"
+                />
+                <div class="card-body">
+                    <h5 class="card-title">
+                        {{this.name}}
+                    </h5>
+                    <p class="card-text">
+                        {{this.description}}
+                    </p>
+                    <a href="#" class="btn btn-primary">Buy this course</a>
+                </div>
+            </li>
+        {{/each}}
+    </div>
+</div>
