--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
     <div>
         <h3>My courses</h3>
-        <a href="/me/trash/courses">Trash</a>
+        <a href="/me/trash/courses">Trash ({{deletedCount}})</a>
     </div>
     <table class="table mt-4">
         <thead>
@@ -9,7 +9,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Course's name</th>
                 <th scope="col">Level</th>
-                <th scope="col" colspan="2">Created at</th>
+                <th scope="col" colspan="2">Deleted at</th>
             </tr>
         </thead>
         <tbody>
@@ -18,7 +18,7 @@
                     <th scope="row">{{sum @index 1}}</th>
                     <td>{{this.name}}</td>
                     <td>{{this.level}}</td>
-                    <td>{{this.createdAt}}</td>
+                    <td>{{this.deletedAt}}</td>
                     <td>
                         <a
                             href="/courses/{{this._id}}/edit"
