--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,12 +1,29 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="POST" action="/courses/handle-form-actions" >
     <div>
         <h3>My courses</h3>
         <a href="/me/trash/courses">Trash ({{deletedCount}})</a>
+
+        <div class="d-flex mt-4 align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+                <label class="form-check-label mx-2 " for="checkbox-all">
+                    Chose all
+                </label>
+            </div>
+
+            <select class="form-control form-control-sm w-25 mr-2 text-center" name="action" required>
+                <option value="">- - Chose an action - -</option>
+                <option value="delete">Delete</option>
+            </select>
+
+            <button class="btn btn-primary btn-sm mr-2 check-all-submit-btn disabled">Apply</button>
+        </div>
     </div>
+
     <table class="table mt-4">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col" colspan="2">#</th>
                 <th scope="col">Course's name</th>
                 <th scope="col">Level</th>
                 <th scope="col" colspan="2">Deleted at</th>
@@ -15,6 +32,11 @@
         <tbody>
             {{#each courses}}
                 <tr>
+                    <td>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}" >
+                        </div>
+                    </td>
                     <th scope="row">{{sum @index 1}}</th>
                     <td>{{this.name}}</td>
                     <td>{{this.level}}</td>
@@ -43,7 +65,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</form>
 
 {{! Confirm delete course }}
 <div id="delete-course-modal" class="modal" tabindex="-1" role="dialog">
@@ -82,24 +104,65 @@
 <form name="delete-course-form" method="POST" action=""></form>
 
 <script>
-    //jQuery of bootstrap 
+    // jQuery of bootstrap 
     document.addEventListener('DOMContentLoaded', function() { 
         var courseId; 
         var deleteForm = document.forms['delete-course-form'];
+        var containerForm = document.forms['container-form'];
         var btnDeleteCourse = document.getElementById('btn-delete-course');
+        var checkboxAll = $('#checkbox-all');
+        var courseItemCheckbox = $('input[name="courseIds[]"]');
+        var checkAllSubmitBtn = $('check-all-submit-btn');
 
-        //When dialog confirm clicked 
+        // When dialog confirm clicked 
         $('#delete-course-modal').on('show.bs.modal',
         function (event) { 
             var button = $(event.relatedTarget); 
             courseId =button.data('id') ; 
         }) 
 
-        //When delete course btn clicked
+        // When delete course btn clicked - javascript
         btnDeleteCourse.onclick = function () { 
             deleteForm.action = '/courses/' + courseId + '?_method=DELETE'; 
             deleteForm.submit(); 
         } 
+
+        //  Checkbox all clicked
+        checkboxAll.change(function () {
+            var isCheckedAll = $(this).prop('checked');
+            courseItemCheckbox.prop('checked', isCheckedAll);
+            renderCheckAllSubmitBtn();
+        });
+
+        //  Course item checkbox clicked
+        courseItemCheckbox.change(function () {
+            var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+            checkboxAll.prop('checked', isCheckedAll);
+            renderCheckAllSubmitBtn();
+        })
+
+        //Check all submit button clicked
+        checkAllSubmitBtn.on('submit', function(e) {
+            var isSubmittable = !$(this).hasClass('disabled');
+            if (!isSubmittable) {
+                e.preventDefault;
+            }
+        })
+
+
+        // Re-render check all submit button
+        function renderCheckAllSubmitBtn() {
+            var checkedCount = $('input[name="courseIds[]"]:checked').length;
+            if(checkedCount > 0) {
+                checkAllSubmitBtn.removeClass('disabled');
+                console.log('can apply')
+            } else {
+                checkAllSubmitBtn.addClass('disabled');
+                console.log('can not apply')
+
+            }
+        }
+
     });
 
 </script>
