--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -33,7 +33,7 @@
                         Ha Chi
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/courses/create">Create a
+                        <a class="dropdown-item" href="/courses/create?user=admin">Create a
                             course</a>
                         <a class="dropdown-item" href="/me/stored/courses">My
                             courses</a>
