Autoincrement _id field

--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -9,7 +9,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Course's name</th>
                 <th scope="col">Level</th>
-                <th scope="col" colspan="2">Created at</th>
+                <th scope="col" colspan="2">Deleted at</th>
             </tr>
         </thead>
         <tbody>
@@ -18,7 +18,7 @@
                     <th scope="row">{{sum @index 1}}</th>
                     <td>{{this.name}}</td>
                     <td>{{this.level}}</td>
-                    <td>{{this.createdAt}}</td>
+                    <td>{{this.deletedAt}}</td>
                     <td>
                         <a
                             href=""
