--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -33,12 +33,15 @@
                         Ha Chi
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/courses/create?user=admin">Create a
-                            course</a>
-                        <a class="dropdown-item" href="/me/stored/courses">My
-                            courses</a>
-                        <a class="dropdown-item" href="/me/stored/news">My
-                            articles</a>
+                        <a class="dropdown-item" href="/courses/create?user=admin">     
+                            Create a course
+                        </a>
+                        <a class="dropdown-item" href="/me/stored/courses">
+                          My courses
+                        </a>
+                        <a class="dropdown-item" href="/me/stored/news">
+                            My articles
+                        </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Sign out</a>
                     </div>
